crates/rtf-orchestrator-ui/src/view/snapshots/rtf_orchestrator_ui__view__execution_detail__tests__execution_template_snapshot_without_parent_run.snap
---
source: crates/rtf-orchestrator-ui/src/view/execution_detail.rs
assertion_line: 178
expression: body
---
<!DOCTYPE html>
<html lang="en">

<head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>Execution exec-alpha</title>
    <link rel="icon" type="image/png" href="/ui/static/gongphin.png" />
    <link rel="stylesheet" href="/ui/static/theme.css" />
    <script src="/ui/static/theme-toggle.js"></script>
    <script src="/ui/static/htmx.min.js"></script>
</head>

<body>
    <header>
        <a class="brand" href="/ui">
            <img class="logo" src="/ui/static/gongphin.png" alt="" />
            <h1>RTF Orchestrator</h1>
        </a>
        <nav>
            <a href="/ui/test-plans">Registered Test Plans</a>
            <a href="/ui/trigger">Trigger from GitHub</a>
            <a href="https://scaling-dollop-ywevlle.pages.github.io/" target="_blank" rel="noopener noreferrer">RTF Docs</a>
        </nav>
        <div class="header-actions">
            <form class="run-lookup"
                onsubmit="event.preventDefault(); const id = this.runId.value.trim(); if (id) { window.location.href = '/ui/run/' + encodeURIComponent(id); }">
                <input name="runId" type="text" placeholder="Test run ID" aria-label="Test run ID" required
                    size="36" />
                <button type="submit">View status</button>
            </form>
            <button id="theme-toggle" type="button" aria-label="Toggle color theme">Dark</button>
        </div>
    </header>
    <main>



<section class="banner">
    <h2>exec-alpha</h2>
    <p><span class="status status--success">SUCCESSFUL</span></p>
    <dl>
        <dt>Execution ID</dt>
        <dd><code>00000000-0000-0000-0000-000000000002</code> <button type="button" class="copy-btn" data-copy="00000000-0000-0000-0000-000000000002"
                aria-label="Copy execution ID" title="Copy to clipboard">
                <svg viewBox="0 0 16 16" width="14" height="14" fill="none" stroke="currentColor" stroke-width="1.3"
                    stroke-linejoin="round">
                    <rect x="5" y="5" width="9" height="9" rx="1.5"></rect>
                    <rect x="2" y="2" width="9" height="9" rx="1.5"></rect>
                </svg>
            </button></dd>
        <dt><a href="https://tldp.org/LDP/abs/html/exitcodes.html" target="_blank" rel="noopener noreferrer">Exit code
                &#8599;</a></dt>
        <dd>
            0
            
        </dd>
        <dt>Started</dt>
        <dd>2024-03-15T09:00:00Z</dd>
        <dt>Updated</dt>
        <dd>2024-03-15T09:05:00Z</dd>
        
        <dt>Completed</dt>
        <dd>2024-03-15T09:05:00Z</dd>
        
    </dl>
    <p>
        <a href="https://console.cloud.google.com/logs/query;query=resource.labels.cluster_name%3D%22cluster_name%22%0Aresource.labels.namespace_name%3D%2200000000-0000-0000-0000-000000000002%22;cursorTimestamp=2024-03-15T09:00:00.000Z;startTime=2024-03-15T09:00:00.000Z;endTime=2024-03-15T09:05:00.000Z?referrer=search&#38;project=gcp-project&#38;supportedpurview=project" target="_blank" rel="noopener noreferrer">View logs in GCP &#8599;</a>
        &middot;
        <a href="http://grafana.com/d/dash-uuid/dash-slug?orgId=1&#38;from=2024-03-15T09:00:00.000Z&#38;to=2024-03-15T09:05:00.000Z&#38;timezone=utc&#38;var-datasource=data-uuid&#38;var-cluster=&#38;var-namespace=00000000-0000-0000-0000-000000000002&#38;refresh=10s" target="_blank" rel="noopener noreferrer">View dashboard in Grafana
            &#8599;</a>
    </p>
    <p>
        <a href="/ui/execution/00000000-0000-0000-0000-000000000002/log.txt">Download log.txt</a>
        &middot;
        <a href="/ui/execution/00000000-0000-0000-0000-000000000002/output.zip">Download output.zip</a>
    </p>
</section>

<h3>Status history</h3>

<ol class="timeline">
    
    <li>
        <span class="status status--success">SUCCESSFUL</span>
        <time>2024-03-15T09:05:00Z</time>
        <p>execution finished</p>
        
    </li>
    
    <li>
        <span class="status status--active">RUNNING</span>
        <time>2024-03-15T09:00:00Z</time>
        
        
    </li>
    
</ol>

</main>
    <script>
        const COPY_BTN_CHECK_ICON = '<svg viewBox="0 0 16 16" width="14" height="14" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 8.5 6.5 12 13 4"></polyline></svg>';

        document.addEventListener("click", (event) => {
            const button = event.target.closest(".copy-btn");
            if (!button) return;
            navigator.clipboard.writeText(button.dataset.copy).then(() => {
                const original = button.innerHTML;
                button.innerHTML = COPY_BTN_CHECK_ICON;
                setTimeout(() => {
                    button.innerHTML = original;
                }, 1200);
            });
        });
    </script>
</body>

</html>
